[package]
name = "tests-integration"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../../README.md"

[dev-dependencies]
tests-support = { path = "../support" }

ombrac = { workspace = true }
ombrac-client = { workspace = true, features = ["full"] }
ombrac-server = { workspace = true, features = ["full"] }
ombrac-transport = { workspace = true }

bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
curl = { workspace = true }
ntest = { workspace = true }
rand = { workspace = true, features = ["thread_rng"] }
blake3 = { workspace = true }

[lints]
workspace = true
