[package]
name = "tests-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../../README.md"

[dependencies]
rcgen = { workspace = true, features = ["pem", "crypto", "aws_lc_rs"] }

[lints]
workspace = true
