[package]
name = "tests-support"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../../README.md"

[dependencies]
ombrac-transport = { workspace = true, features = ["datagram"] }
bytes = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rcgen = { workspace = true, features = ["pem", "crypto", "aws_lc_rs"] }

[lints]
workspace = true
