[package]
name = "tests-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
test-support.workspace = true

ombrac-client.workspace = true
ombrac-server.workspace = true
ombrac-protocol.workspace = true

tokio = { workspace = true, features = ["full"] }
bytes = { workspace = true }

[lints]
workspace = true
