[package]
name = "test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
ombrac-client.workspace = true
ombrac-server.workspace = true
ombrac-protocol.workspace = true

tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
